plugins {
    id 'java'
    id 'application'
}

group = 'proj1'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter:5.11.0")
    testImplementation(platform("org.junit:junit-bom:5.11.0"))
    testImplementation 'org.javatuples:javatuples:1.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
    implementation 'org.json:json:20251224'
    compileOnly("org.projectlombok:lombok:1.18.46")
    annotationProcessor("org.projectlombok:lombok:1.18.46")

    testCompileOnly("org.projectlombok:lombok:1.18.46")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.46")
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}


compileJava.options.compilerArgs += ['--enable-preview', '--release', '25']
run.jvmArgs += ['--enable-preview']


application {
    mainClass = 'Main'
}

// Permite que o programa leia do teclado quando rodado via gradlew run
run {
    standardInput = System.in
}


test {
    useJUnitPlatform()
}